first day commit

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: netflix_recommendation
+name: netflix_clone
 description: "A new Flutter project."
 publish_to: 'none' 
 version: 1.0.0+1
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  lottie: ^3.1.3
 
 dev_dependencies:
   flutter_test:
