--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   lottie: ^3.1.3
   google_fonts: ^6.2.1
   http: ^1.2.2
+  carousel_slider: ^5.0.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
